delete useless photo and fixed link to photo for banner not showing on heroku

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -54,7 +54,7 @@
   justify-content: center;
   height: 250px;
   width: 100vw;
-  background-image: linear-gradient(to right, rgba(0,0,0,0.6), rgba(0,0,0,0.3)), url("color_palette.jpg");
+  background-image: linear-gradient(to right, rgba(0,0,0,0.6), rgba(0,0,0,0.3)), asset-url("color_palette.jpg");
   background-size: cover;
   background-position: right center;
 
